# opensaf

./: 00-README.conf  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  opensaf.spec.in  test.sh
python/pyosaf/: saAis.py  saAmf.py  saClm.py  saImm.py  saLog.py
python/samples/: imm-listener  imm-listener-inheritance-impl  immbase.py  immlist  scale_opensaf
samples/: configure.ac
samples/amf/: Makefile.am
samples/amf/container/: AppConfig-contained-2N.xml  AppConfig-container.xml  Makefile.am  README  amf_contained.c  amf_container.c  amf_container_script
scripts/: opensaf_reboot  tipc-config
src/amf/: Makefile.am  README_CONTAINER
src/base/: Makefile.am  conf.cc  config_file_reader.cc  config_file_reader.h  daemon.c  daemon.h  log_writer.h  logtrace.cc  logtrace.h  logtrace_buffer.cc  logtrace_buffer.h  logtrace_client.cc  logtrace_client.h  ncssysf_def.h  os_defs.c  osaf_secutil.c  osaf_secutil.h  sna.h  statistics.h  sysf_def.c  sysf_exc_scr.c
src/dtm/: Makefile  README
src/evt/: Makefile.am
src/fm/: Makefile.am
src/imm/: Makefile.am  README  README.SC_ABSENCE
src/log/: Makefile.am  README
src/mbc/: mbcsv.h  mbcsv_act.c  mbcsv_api.c  mbcsv_env.h  mbcsv_evt_msg.h  mbcsv_mds.c  mbcsv_peer.c  mbcsv_pr_evts.c  mbcsv_queue.c  mbcsv_util.c
src/mds/: Makefile.am  README  mds_c_api.c  mds_c_db.c  mds_c_sndrcv.c  mds_core.h  mds_dt.h  mds_dt2c.h  mds_dt_common.c  mds_dt_tcp.c  mds_dt_tcp.h  mds_dt_tipc.c  mds_dt_tipc.h  mds_main.c  mds_papi.h  mds_tipc_fctrl_intf.cc  mds_tipc_fctrl_intf.h  mds_tipc_fctrl_msg.cc  mds_tipc_fctrl_msg.h  (+6 more)
(+522 files in other folders)
